work together modal dark mode fix

--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -191,7 +191,7 @@ align-items: center;
 }
 
 .modal-text {
-    color: var(--Black, #292929);
+    /* color: var(--Black, #292929); */
         text-align: center;
         font-family: Poppins;
         font-size: 16px;
